# prelegal

./: .gitignore  CLAUDE.md  LICENSE  README.md  catalog.json  start.bat  start.sh  stop.bat  stop.sh
.claude/: settings.local.json
backend/: auth.py  chat.py  database.py  documents.py  main.py  models.py  prompts.py  pyproject.toml  test_auth.py
backend/tests/: test_chat.py  test_prompts.py
frontend/: jest.config.js  jest.setup.ts  middleware.ts  package.json  tailwind.config.ts
frontend/__tests__/app/: page.test.tsx
frontend/__tests__/components/: NdaDocument.test.tsx  NdaForm.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/document-creator/: client.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/nda-creator/: page.tsx
frontend/components/: ChatPane.tsx  DisclaimerBanner.tsx  DocumentHistory.tsx  FieldsSummary.tsx  NdaDocument.tsx  NdaForm.tsx
frontend/lib/: api.ts  catalog.ts  chat.ts  documents.ts  types.ts
templates/: LICENSE.txt
