[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt<4.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.0",
    "openai>=2.30.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
